# zeroth-bot

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md
experiments/: deploy_policy.py  policy.py  record_position.py  test_connections.py  zbot_walking.kinfer
kos-zbot/: Cargo.toml  build.rs
kos-zbot/firmware/cviwrapper/: cviwrapper.c
kos-zbot/firmware/efuse/: efuse_read_serial
kos-zbot/firmware/feetech/: feetech.c  feetech.h
kos-zbot/models/: README.md  convert_model.sh
kos-zbot/src/: actuator.rs  imu.rs  imu_bmi088.rs  imu_bno055.rs  led_matrix.rs  lib.rs  main.rs  model.rs
kos-zbot/src/firmware/: cvitek.rs  feetech.rs  mod.rs
kos-zbot/src/firmware/feetech_servo/: mod.rs  sts3215.rs
runtime/.cargo/: config.toml
runtime/firmware/feetech/: Makefile  feetech.h
runtime/kos_platform/: Cargo.toml
runtime/kos_platform/.cargo/: config.toml
runtime/kos_platform/src/: actuator.rs  imu.rs  imu_next.rs  inference.rs  lib.rs  main.rs  model.rs
runtime/kos_platform/src/firmware/: cvitek.rs  feetech.rs  feetech.rs.old  mod.rs  qmi8658.rs
runtime/kos_platform/src/firmware/feetech_servo/: sts3215.rs
runtime/src/: controller.rs  main.rs
runtime/src/hal_risc/: mod.rs
runtime/toolchain-docker-img/: Dockerfile
