[package]
name = "kos-zeroth-01"
version = "0.1.1"
authors = ["Denys Bezmenov <denys@kscale.dev>", "Jingxiang Mo <jx@kscale.dev>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/kscalelabs/kos"
description = "KOS platform for Zeroth-01"

[dependencies]
kos_core = { version = "0.1.1", path = "../../kos_core" }
async-trait = "0.1"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = { git = "https://github.com/hatomist/tonic-milkv" }
tokio = { version = "1", features = ["full"] }
bno055 = "0.4.0"
